Created a new template for iticse and thereafter changed the page type of iticse blog posts to iticse which use the iticse template to display the blog post correctly

--- a/events/iticse/1996.md
+++ b/events/iticse/1996.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-event: symposium
+event: iticse
 
 year: 1996
 title: 1st ITiCSE Conference 1996
@@ -12,7 +12,7 @@ doi: "https://dl.acm.org/doi/proceedings/10.1145/237466"
 
 ---
 
-{% include symposium-head.md %}
+{% include iticse-head.md %}
 
 **Publication Acceptance Rates**
 
