--- a/events/iticse/2005.md
+++ b/events/iticse/2005.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-event: symposium
+event: iticse
 
 year: 2005
 title: 10th ITiCSE Conference 2005
@@ -14,7 +14,7 @@ acceptance: 33%
 
 ---
 
-{% include symposium-head.md %}
+{% include iticse-head.md %}
 
 **Publication Acceptance Rates**
 
