--- a/events/iticse/2008.md
+++ b/events/iticse/2008.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-event: symposium
+event: iticse
 
 year: 2008
 title: 13th ITiCSE Conference 2008
@@ -17,7 +17,7 @@ doi-wgr: " "
 
 ---
 
-{% include symposium-head.md %}
+{% include iticse-head.md %}
 
 **Publication Acceptance Rates**
 
