--- a/events/iticse/1997.md
+++ b/events/iticse/1997.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-event: symposium
+event: iticse
 
 year: 1997
 title: 2nd ITiCSE Conference 1997
@@ -15,7 +15,7 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/266057"
 
 ---
 
-{% include symposium-head.md %}
+{% include iticse-head.md %}
 
 **Publication Acceptance Rates**
 
