--- a/events/iticse/1998.md
+++ b/events/iticse/1998.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-event: symposium
+event: iticse
 
 year: 1998
 title: 3rd ITiCSE Conference 1998
@@ -15,7 +15,7 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/316572"
 
 ---
 
-{% include symposium-head.md %}
+{% include iticse-head.md %}
 
 **Publication Acceptance Rates**
 
