--- a/events/iticse/2001.md
+++ b/events/iticse/2001.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-event: symposium
+event: iticse
 
 year: 2001
 title: 6th ITiCSE Conference 2001
@@ -16,7 +16,7 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/572133"
 
 ---
 
-{% include symposium-head.md %}
+{% include iticse-head.md %}
 
 **Publication Acceptance Rates**
 
