--- a/events/iticse/2002.md
+++ b/events/iticse/2002.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-event: symposium
+event: iticse
 
 year: 2002
 title: 7th ITiCSE Conference 2002
@@ -16,7 +16,7 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/960568"
 
 ---
 
-{% include symposium-head.md %}
+{% include iticse-head.md %}
 
 **Publication Acceptance Rates**
 
