--- a/events/iticse/2004.md
+++ b/events/iticse/2004.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-event: symposium
+event: iticse
 
 year: 2004
 title: 9th ITiCSE Conference 2004
@@ -16,7 +16,7 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/1044550"
 
 ---
 
-{% include symposium-head.md %}
+{% include iticse-head.md %}
 
 **Publication Acceptance Rates**
 
