--- a/events/iticse/2007.md
+++ b/events/iticse/2007.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-event: symposium
+event: iticse
 
 year: 2007
 title: 12th ITiCSE Conference 2007
@@ -17,7 +17,7 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/1345443"
 
 ---
 
-{% include symposium-head.md %}
+{% include iticse-head.md %}
 
 **Publication Acceptance Rates**
 
