--- a/events/iticse/2009.md
+++ b/events/iticse/2009.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-event: symposium
+event: iticse
 
 year: 2009
 title: 14th ITiCSE Conference 2009
@@ -15,7 +15,7 @@ attendance: 247
 
 ---
 
-{% include symposium-head.md %}
+{% include iticse-head.md %}
 
 **Publication Acceptance Rates**
 
