--- a/events/iticse/2013.md
+++ b/events/iticse/2013.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-event: symposium
+event: iticse
 
 year: 2013
 title: 18th ITiCSE Conference 2013
@@ -17,7 +17,7 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/2543882"
 
 ---
 
-{% include symposium-head.md %}
+{% include iticse-head.md %}
 
 **Publication Acceptance Rates**
 
