--- a/events/iticse/2014.md
+++ b/events/iticse/2014.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-event: symposium
+event: iticse
 
 year: 2014
 title: 19th ITiCSE Conference 2014
@@ -17,7 +17,7 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/2713609"
 
 ---
 
-{% include symposium-head.md %}
+{% include iticse-head.md %}
 
 **Publication Acceptance Rates**
 
