--- a/events/iticse/2015.md
+++ b/events/iticse/2015.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-event: symposium
+event: iticse
 
 year: 2015
 title: 20th ITiCSE Conference 2015
@@ -17,7 +17,7 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/2858796"
 
 ---
 
-{% include symposium-head.md %}
+{% include iticse-head.md %}
 
 **Publication Acceptance Rates**
 
