--- a/events/iticse/2016.md
+++ b/events/iticse/2016.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-event: symposium
+event: iticse
 
 year: 2016
 title: 21st ITiCSE Conference 2016
@@ -17,7 +17,7 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/3024906"
 
 ---
 
-{% include symposium-head.md %}
+{% include iticse-head.md %}
 
 **Publication Acceptance Rates**
 
