--- a/events/iticse/2018.md
+++ b/events/iticse/2018.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-event: symposium
+event: iticse
 
 year: 2018
 title: 23rd ITiCSE Conference 2018
@@ -16,7 +16,7 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/3293881"
 
 ---
 
-{% include symposium-head.md %}
+{% include iticse-head.md %}
 
 **Publication Acceptance Rates**
 
