--- a/events/iticse/2019.md
+++ b/events/iticse/2019.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-event: symposium
+event: iticse
 
 year: 2019
 title: 24th ITiCSE Conference 2019
@@ -16,7 +16,7 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/3344429"
 
 ---
 
-{% include symposium-head.md %}
+{% include iticse-head.md %}
 
 **Publication Acceptance Rates**
 
