--- a/events/iticse/2020.md
+++ b/events/iticse/2020.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-event: symposium
+event: iticse
 
 year: 2020
 title: 25th ITiCSE Conference 2020
@@ -14,7 +14,7 @@ acceptance: 28%
 
 ---
 
-{% include symposium-head.md %}
+{% include iticse-head.md %}
 
 **Publication Acceptance Rates**
 
