modified alignment of text on ITiCSE pages

--- a/events/iticse/1997.md
+++ b/events/iticse/1997.md
@@ -17,6 +17,15 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/266057"
 
 {% include iticse-head.md %}
 
+
+**Committee**
+
+Conference Chair(s)
+
+-   Lillian N. Cassel, Villanova University (Co-Chair)
+-   Mats Daniels, Uppsala University (Co-Chair)
+
+
 **Publication Acceptance Rates**
 
  <table class="table table-hover table-sm"><tbody><tr><th> </th>
@@ -27,11 +36,4 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/266057"
 <td>123</td>
 <td>42</td>
 <td>34.1%</td>
-
-**Symposium Committee**
-
-Conference Chair(s)
-
--   Lillian N. Cassel, Villanova University (Co-Chair)
--   Mats Daniels, Uppsala University (Co-Chair)
 
