--- a/events/iticse/1999.md
+++ b/events/iticse/1999.md
@@ -18,6 +18,18 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/349316"
 
 {% include iticse-head.md %}
 
+**Committee**
+
+Conference Chair(s)
+
+-   Carl Erickson, Grand Valley State University, USA (Co-Chair)
+-   Tadeusz Wilusz, Cracow University of Economics, Poland (Co-Chair)
+
+Program Chair(s)
+
+-   Mats Daniels, Uppsala University, Sweden (Program Co-Chair)
+-   Renee McCauley, University of Southwestern Louisiana, USA (Program Co-Chair)
+
 **Publication Acceptance Rates**
 
  <table class="table table-hover table-sm"><tbody><tr><th> </th>
@@ -29,14 +41,3 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/349316"
 <td>44</td>
 <td>51.2%</td>
 
-**Symposium Committee**
-
-Conference Chair(s)
-
--   Carl Erickson, Grand Valley State University, USA (Co-Chair)
--   Tadeusz Wilusz, Cracow University of Economics, Poland (Co-Chair)
-
-Program Chair(s)
-
--   Mats Daniels, Uppsala University, Sweden (Program Co-Chair)
--   Renee McCauley, University of Southwestern Louisiana, USA (Program Co-Chair)
