--- a/events/iticse/2000.md
+++ b/events/iticse/2000.md
@@ -19,6 +19,17 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/571968"
 
 {% include iticse-head.md %}
 
+**Committee**
+
+Conference Chair(s)
+
+-   Jorma Tarhio, University of Joensuu, Finland
+
+Program Chair(s)
+
+-   Sally Fincher, University of Kent at Canterbury, UK
+-   Dan Joyce, Villanova University, USA
+
 **Publication Acceptance Rates**
 
  <table class="table table-hover table-sm"><tbody><tr><th> </th>
@@ -30,13 +41,3 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/571968"
 <td>44</td>
 <td>38.3%</td>
 
-**Symposium Committee**
-
-Conference Chair(s)
-
--   Jorma Tarhio, University of Joensuu, Finland
-
-Program Chair(s)
-
--   Sally Fincher, University of Kent at Canterbury, UK
--   Dan Joyce, Villanova University, USA
