--- a/events/iticse/2001.md
+++ b/events/iticse/2001.md
@@ -18,6 +18,18 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/572133"
 
 {% include iticse-head.md %}
 
+**Committee**
+
+Conference Chair(s)
+
+-   Sally Fincher, University of Kent at Canterbury, UK
+-   Bruce Klein, Grand Valley State University, USA
+
+Program Chair(s)
+
+-   Fintan Culwin, South Bank University, UK
+-   Mike McCraken, Georgia Institute of Technology, USA
+
 **Publication Acceptance Rates**
 
  <table class="table table-hover table-sm"><tbody><tr><th> </th>
@@ -29,14 +41,3 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/572133"
 <td>43</td>
 <td>30.9%</td>
 
-**Symposium Committee**
-
-Conference Chair(s)
-
--   Sally Fincher, University of Kent at Canterbury, UK
--   Bruce Klein, Grand Valley State University, USA
-
-Program Chair(s)
-
--   Fintan Culwin, South Bank University, UK
--   Mike McCraken, Georgia Institute of Technology, USA
