--- a/events/iticse/2002.md
+++ b/events/iticse/2002.md
@@ -18,18 +18,8 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/960568"
 
 {% include iticse-head.md %}
 
-**Publication Acceptance Rates**
 
- <table class="table table-hover table-sm"><tbody><tr><th> </th>
-<th>Submitted</th>
-<th>Accepted</th>
-<th>Acceptance rate</th>
-</tr><tr><td>Papers</td>
-<td>100</td>
-<td>42</td>
-<td>42%</td>
-
-**Symposium Committee**
+**Committee**
 
 Conference Chair(s)
 
@@ -40,3 +30,14 @@ Program Chair(s)
 
 -   Don Goelman, Villanova University, USA
 -   Ian Utting, University of Kent, UK
+
+**Publication Acceptance Rates**
+
+ <table class="table table-hover table-sm"><tbody><tr><th> </th>
+<th>Submitted</th>
+<th>Accepted</th>
+<th>Acceptance rate</th>
+</tr><tr><td>Papers</td>
+<td>100</td>
+<td>42</td>
+<td>42%</td>
