--- a/events/iticse/2004.md
+++ b/events/iticse/2004.md
@@ -18,6 +18,17 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/1044550"
 
 {% include iticse-head.md %}
 
+**Committee**
+
+Conference Chair(s)
+
+-   Roger Boyle, University of Leeds, UK 
+
+Program Chair(s)
+
+-   Martyn Clark, University of Leeds, UK (Program Co-Chair)
+-   Amruth Kumar, Ramapo College of NJ, USA (Program Co-Chair)
+
 **Publication Acceptance Rates**
 
  <table class="table table-hover table-sm"><tbody><tr><th> </th>
@@ -29,13 +40,3 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/1044550"
 <td>46</td>
 <td>30%</td>
 
-**Symposium Committee**
-
-Conference Chair(s)
-
--   Roger Boyle, University of Leeds, UK 
-
-Program Chair(s)
-
--   Martyn Clark, University of Leeds, UK (Program Co-Chair)
--   Amruth Kumar, Ramapo College of NJ, USA (Program Co-Chair)
