--- a/events/iticse/2005.md
+++ b/events/iticse/2005.md
@@ -16,6 +16,18 @@ acceptance: 33%
 
 {% include iticse-head.md %}
 
+**Committee**
+
+Conference Chair(s)
+
+-   José C. Cunha, Universidade Nova de Lisboa
+-   William M. Fleishman, Villanova University, USA
+
+Program Chair(s)
+
+-   João M. Lourenço, Universidade Nova de Lisboa
+-   Viera K. Proulx, Northeastern University, USA
+
 **Publication Acceptance Rates**
 
  <table class="table table-hover table-sm"><tbody><tr><th> </th>
@@ -27,14 +39,3 @@ acceptance: 33%
 <td>68</td>
 <td> </td>
 
-**Symposium Committee**
-
-Conference Chair(s)
-
--   José C. Cunha, Universidade Nova de Lisboa
--   William M. Fleishman, Villanova University, USA
-
-Program Chair(s)
-
--   João M. Lourenço, Universidade Nova de Lisboa
--   Viera K. Proulx, Northeastern University, USA
