--- a/events/iticse/2008.md
+++ b/events/iticse/2008.md
@@ -19,6 +19,17 @@ doi-wgr: " "
 
 {% include iticse-head.md %}
 
+**Committee**
+
+Conference Chair(s)
+
+-   June Amillo, Universidad Politecnica de Madrid
+
+Program Chair(s)
+
+-   Ernestina Menasalvas, Universidad Politecnica de Madrid
+-   Raquel Martinez, Universidad Politecnica de Madrid
+
 **Publication Acceptance Rates**
 
  <table class="table table-hover table-sm"><tbody><tr><th> </th>
@@ -30,13 +41,3 @@ doi-wgr: " "
 <td>60</td>
 <td>40%</td>
 
-**Symposium Committee**
-
-Conference Chair(s)
-
--   June Amillo, Universidad Politecnica de Madrid
-
-Program Chair(s)
-
--   Ernestina Menasalvas, Universidad Politecnica de Madrid
--   Raquel Martinez, Universidad Politecnica de Madrid
