--- a/events/iticse/2012.md
+++ b/events/iticse/2012.md
@@ -19,6 +19,18 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/2426636"
 
 {% include iticse-head.md %}
 
+**Committee**
+
+Conference Chair(s)
+
+-   Tami Lapidot, Technion Israel
+-   Judith Gal-Ezer, The Open University Israel
+
+Program Chair(s)
+
+-   Michael Caspersen, Aarhus University Denmark
+-   Orit Hazzan, Technion Israel
+
 **Publication Acceptance Rates**
 
  <table class="table table-hover table-sm"><tbody><tr><th> </th>
@@ -30,14 +42,3 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/2426636"
 <td>60</td>
 <td>45%</td>
 
-**Symposium Committee**
-
-Conference Chair(s)
-
--   Tami Lapidot, Technion Israel
--   Judith Gal-Ezer, The Open University Israel
-
-Program Chair(s)
-
--   Michael Caspersen, Aarhus University Denmark
--   Orit Hazzan, Technion Israel
