--- a/events/iticse/2014.md
+++ b/events/iticse/2014.md
@@ -19,6 +19,18 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/2713609"
 
 {% include iticse-head.md %}
 
+**Committee**
+
+Conference Chair(s)
+
+-   Asa Cajander, Uppsala University, Sweden
+-   Mats Daniels, Uppsala University, Sweden
+
+Program Chair(s)
+
+-   Tony Clear, Auckland University of Technology, New Zealand
+-   Arnold Pears, Uppsala University, Sweden
+
 **Publication Acceptance Rates**
 
  <table class="table table-hover table-sm"><tbody><tr><th> </th>
@@ -30,14 +42,3 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/2713609"
 <td>53</td>
 <td>35%</td>
 
-**Symposium Committee**
-
-Conference Chair(s)
-
--   Asa Cajander, Uppsala University, Sweden
--   Mats Daniels, Uppsala University, Sweden
-
-Program Chair(s)
-
--   Tony Clear, Auckland University of Technology, New Zealand
--   Arnold Pears, Uppsala University, Sweden
