--- a/events/iticse/2015.md
+++ b/events/iticse/2015.md
@@ -19,6 +19,17 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/2858796"
 
 {% include iticse-head.md %}
 
+**Committee**
+
+Conference Chair(s)
+
+-   Valentina Dagiene, Vilnius University, Lithuania
+
+Program Chair(s)
+
+-   Carsten Schulte, Berlin Freie University, Germany
+-   Tatjana Jevsikova, Vilnius University, Lithuania
+
 **Publication Acceptance Rates**
 
  <table class="table table-hover table-sm"><tbody><tr><th> </th>
@@ -30,13 +41,3 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/2858796"
 <td>54</td>
 <td>43.5%</td>
 
-**Symposium Committee**
-
-Conference Chair(s)
-
--   Valentina Dagiene, Vilnius University, Lithuania
-
-Program Chair(s)
-
--   Carsten Schulte, Berlin Freie University, Germany
--   Tatjana Jevsikova, Vilnius University, Lithuania
