--- a/events/iticse/2016.md
+++ b/events/iticse/2016.md
@@ -19,6 +19,18 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/3024906"
 
 {% include iticse-head.md %}
 
+**Committee**
+
+Conference Chair(s)
+
+-   Ernesto Cuardros-Vagras, UCSP, Peru
+-   Alison Clear, Eastern Institute of Technology, New Zealand
+
+Program Chair(s)
+
+-   Janet Carter, University of Kent, Canterbury
+-   Yvan Tupac, San Pablo Catholic University, Peru
+
 **Publication Acceptance Rates**
 
  <table class="table table-hover table-sm"><tbody><tr><th> </th>
@@ -30,14 +42,3 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/3024906"
 <td>56</td>
 <td>38%</td>
 
-**Symposium Committee**
-
-Conference Chair(s)
-
--   Ernesto Cuardros-Vagras, UCSP, Peru
--   Alison Clear, Eastern Institute of Technology, New Zealand
-
-Program Chair(s)
-
--   Janet Carter, University of Kent, Canterbury
--   Yvan Tupac, San Pablo Catholic University, Peru
