--- a/events/iticse/2017.md
+++ b/events/iticse/2017.md
@@ -19,6 +19,18 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/3174781"
 
 {% include iticse-head.md %}
 
+**Committee**
+
+Conference Chair(s)
+
+-   Renzo Davoli, University of Bologna, Italy
+-   Mikey Goldweber, Xavier University, Ohio, USA
+
+Program Chair(s)
+
+-   Guido Rossling, Germany
+-   Irene Polycarpou, Cyprus
+
 **Publication Acceptance Rates**
 
  <table class="table table-hover table-sm"><tbody><tr><th> </th>
@@ -30,14 +42,3 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/3174781"
 <td>56</td>
 <td>32%</td>
 
-**Symposium Committee**
-
-Conference Chair(s)
-
--   Renzo Davoli, University of Bologna, Italy
--   Mikey Goldweber, Xavier University, Ohio, USA
-
-Program Chair(s)
-
--   Guido Rossling, Germany
--   Irene Polycarpou, Cyprus
