--- a/events/iticse/2018.md
+++ b/events/iticse/2018.md
@@ -18,6 +18,18 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/3293881"
 
 {% include iticse-head.md %}
 
+**Committee**
+
+Conference Chair(s)
+
+-   Irene Polycarpou, Cyprus
+-   Janet C. Read, UK
+
+Program Chair(s)
+
+-   Panayiotis Andreou, Cyprus
+-   Michal Armoni, Israel
+
 **Publication Acceptance Rates**
 
  <table class="table table-hover table-sm"><tbody><tr><th> </th>
@@ -29,14 +41,3 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/3293881"
 <td> </td>
 <td> </td>
 
-**Symposium Committee**
-
-Conference Chair(s)
-
--   Irene Polycarpou, Cyprus
--   Janet C. Read, UK
-
-Program Chair(s)
-
--   Panayiotis Andreou, Cyprus
--   Michal Armoni, Israel
