--- a/events/iticse/2020.md
+++ b/events/iticse/2020.md
@@ -16,6 +16,18 @@ acceptance: 28%
 
 {% include iticse-head.md %}
 
+**Committee**
+
+Conference Chair(s)
+
+-   Michail Giannakos, NTNU, Norway
+-   Guttorm Sindre, Excited/NTNU, Norway
+
+Program Chair(s)
+
+-   Andrew Luxton-Reilly, U. of Auckland, NZ
+-   Monica Divitini, NTNU, Norway
+
 **Publication Acceptance Rates**
 
  <table class="table table-hover table-sm"><tbody><tr><th> </th>
@@ -27,14 +39,4 @@ acceptance: 28%
 <td> </td>
 <td> </td>
 
-**Symposium Committee**
 
-Conference Chair(s)
-
--   Michail Giannakos, NTNU, Norway
--   Guttorm Sindre, Excited/NTNU, Norway
-
-Program Chair(s)
-
--   Andrew Luxton-Reilly, U. of Auckland, NZ
--   Monica Divitini, NTNU, Norway
