--- a/events/iticse/1996.md
+++ b/events/iticse/1996.md
@@ -14,6 +14,13 @@ doi: "https://dl.acm.org/doi/proceedings/10.1145/237466"
 
 {% include iticse-head.md %}
 
+**Committee**
+
+Conference Chair(s)
+
+-   Lillian N. Cassel, Villanova University (Co-Chair)
+-   Jim Hightower, University of California at Fullerton (Co-Chair)
+
 **Publication Acceptance Rates**
 
  <table class="table table-hover table-sm"><tbody><tr><th> </th>
@@ -24,11 +31,4 @@ doi: "https://dl.acm.org/doi/proceedings/10.1145/237466"
 <td> </td>
 <td>46</td>
 <td> </td>
-
-**Symposium Committee**
-
-Conference Chair(s)
-
--   Lillian N. Cassel, Villanova University (Co-Chair)
--   Jim Hightower, University of California at Fullerton (Co-Chair)
 
