--- a/events/iticse/1998.md
+++ b/events/iticse/1998.md
@@ -17,6 +17,15 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/316572"
 
 {% include iticse-head.md %}
 
+
+**Committee**
+
+Conference Chair(s)
+
+-   Gordon Davies, Open University (Co-Chair)
+-   Micheal OhEigeartaigh, Dublin City University, Ireland (Co-Chair)
+
+
 **Publication Acceptance Rates**
 
  <table class="table table-hover table-sm"><tbody><tr><th> </th>
@@ -28,10 +37,4 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/316572"
 <td>59</td>
 <td> </td>
 
-**Symposium Committee**
-
-Conference Chair(s)
-
--   Gordon Davies, Open University (Co-Chair)
--   Micheal OhEigeartaigh, Dublin City University, Ireland (Co-Chair)
 
