--- a/events/iticse/2003.md
+++ b/events/iticse/2003.md
@@ -18,6 +18,18 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/960875"
 
 {% include iticse-head.md %}
 
+**Committee**
+
+Conference Chair(s)
+
+-   Vassilios Dagdilelis, University of Macedonia, Greece
+-   Maya Satratzemi, University of Macedonia, Greece
+
+Program Chair(s)
+
+-   Roger Boyle, University of Leeds, UK
+-   Georgios Evangelidis, University of Macedonia, Greece
+
 **Publication Acceptance Rates**
 
  <table class="table table-hover table-sm"><tbody><tr><th> </th>
@@ -29,14 +41,3 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/960875"
 <td>44</td>
 <td>34.1%</td>
 
-**Symposium Committee**
-
-Conference Chair(s)
-
--   Vassilios Dagdilelis, University of Macedonia, Greece
--   Maya Satratzemi, University of Macedonia, Greece
-
-Program Chair(s)
-
--   Roger Boyle, University of Leeds, UK
--   Georgios Evangelidis, University of Macedonia, Greece
