--- a/events/iticse/2006.md
+++ b/events/iticse/2006.md
@@ -19,6 +19,17 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/1189215"
 
 {% include iticse-head.md %}
 
+**Committee**
+
+Conference Chair(s)
+
+-   Renzo Davoli, University of Bologna
+
+Program Chair(s)
+
+-   Paola Salomoni, University of Bologna
+-   Michael Goldweber, Xavier University, USA
+
 **Publication Acceptance Rates**
 
  <table class="table table-hover table-sm"><tbody><tr><th> </th>
@@ -30,13 +41,3 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/1189215"
 <td>59</td>
 <td>30%</td>
 
-**Symposium Committee**
-
-Conference Chair(s)
-
--   Renzo Davoli, University of Bologna
-
-Program Chair(s)
-
--   Paola Salomoni, University of Bologna
--   Michael Goldweber, Xavier University, USA
