--- a/events/iticse/2007.md
+++ b/events/iticse/2007.md
@@ -19,6 +19,17 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/1345443"
 
 {% include iticse-head.md %}
 
+**Committee**
+
+Conference Chair(s)
+
+-   Janet Hughes, University of Dundee
+
+Program Chair(s)
+
+-   Ramanee Peiris, University of Dundee
+-   Paul Tymann, Rochester Institute of Technology
+
 **Publication Acceptance Rates**
 
  <table class="table table-hover table-sm"><tbody><tr><th> </th>
@@ -30,13 +41,3 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/1345443"
 <td>61</td>
 <td>28.9%</td>
 
-**Symposium Committee**
-
-Conference Chair(s)
-
--   Janet Hughes, University of Dundee
-
-Program Chair(s)
-
--   Ramanee Peiris, University of Dundee
--   Paul Tymann, Rochester Institute of Technology
