--- a/events/iticse/2009.md
+++ b/events/iticse/2009.md
@@ -17,6 +17,17 @@ attendance: 247
 
 {% include iticse-head.md %}
 
+**Committee**
+
+Conference Chair(s)
+
+-   Patrick Brezillon, Université Pierre et Marie Curie
+
+Program Chair(s)
+
+-   Ingrid Russell, University of Hartford
+-   Jean-Marc Labat, Université Pierre et Marie Curie
+
 **Publication Acceptance Rates**
 
  <table class="table table-hover table-sm"><tbody><tr><th> </th>
@@ -28,13 +39,3 @@ attendance: 247
 <td>66</td>
 <td>32%</td>
 
-**Symposium Committee**
-
-Conference Chair(s)
-
--   Patrick Brezillon, Université Pierre et Marie Curie
-
-Program Chair(s)
-
--   Ingrid Russell, University of Hartford
--   Jean-Marc Labat, Université Pierre et Marie Curie
