--- a/events/iticse/2010.md
+++ b/events/iticse/2010.md
@@ -19,6 +19,17 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/1971681"
 
 {% include iticse-head.md %}
 
+**Committee**
+
+Conference Chair(s)
+
+-   Reyan Ayfer, Bilkent University, Turkey
+-   John Impagliazzo, Qatar University, Qatar
+
+Program Chair(s)
+
+-   Cary Laxer, Rose-Hulman Institute of Technology, USA
+
 **Publication Acceptance Rates**
 
  <table class="table table-hover table-sm"><tbody><tr><th> </th>
@@ -30,13 +41,4 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/1971681"
 <td>60</td>
 <td>51.3%</td>
 
-**Symposium Committee**
 
-Conference Chair(s)
-
--   Reyan Ayfer, Bilkent University, Turkey
--   John Impagliazzo, Qatar University, Qatar
-
-Program Chair(s)
-
--   Cary Laxer, Rose-Hulman Institute of Technology, USA
