--- a/events/iticse/2011.md
+++ b/events/iticse/2011.md
@@ -19,6 +19,18 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/2078856"
 
 {% include iticse-head.md %}
 
+
+**Committee**
+
+Conference Chair(s)
+
+-   Guido Rößling - TU Darmstadt, Germany
+-   Christian Spannagel - PH Heidelberg, Germany
+
+Program Chair(s)
+
+-   Thomas L. Naps - University of Wisconsin Oshkosh, USA
+
 **Publication Acceptance Rates**
 
  <table class="table table-hover table-sm"><tbody><tr><th> </th>
@@ -30,13 +42,4 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/2078856"
 <td>65</td>
 <td>38.5%</td>
 
-**Symposium Committee**
 
-Conference Chair(s)
-
--   Guido Rößling - TU Darmstadt, Germany
--   Christian Spannagel - PH Heidelberg, Germany
-
-Program Chair(s)
-
--   Thomas L. Naps - University of Wisconsin Oshkosh, USA
