--- a/events/iticse/2013.md
+++ b/events/iticse/2013.md
@@ -19,6 +19,17 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/2543882"
 
 {% include iticse-head.md %}
 
+**Committee**
+
+Conference Chair(s)
+
+-   Janet Carter, University of Kent UK
+
+Program Chair(s)
+
+-   Ian Utting, University of Kent UK
+-   Alison Clear, Christchurch Polytechnic Institute of Technology, NZ
+
 **Publication Acceptance Rates**
 
  <table class="table table-hover table-sm"><tbody><tr><th> </th>
@@ -30,13 +41,3 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/2543882"
 <td>51</td>
 <td>32%</td>
 
-**Symposium Committee**
-
-Conference Chair(s)
-
--   Janet Carter, University of Kent UK
-
-Program Chair(s)
-
--   Ian Utting, University of Kent UK
--   Alison Clear, Christchurch Polytechnic Institute of Technology, NZ
