--- a/events/iticse/2019.md
+++ b/events/iticse/2019.md
@@ -18,6 +18,18 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/3344429"
 
 {% include iticse-head.md %}
 
+**Committee**
+
+Conference Chair(s)
+
+-   Roger McDermett
+-   Bruce Scharlau
+
+Program Chair(s)
+
+-   Arnold Pears
+-   Mihaela Sabin
+
 **Publication Acceptance Rates**
 
  <table class="table table-hover table-sm"><tbody><tr><th> </th>
@@ -29,14 +41,3 @@ doi-wgr: "https://dl.acm.org/doi/proceedings/10.1145/3344429"
 <td> </td>
 <td> </td>
 
-**Symposium Committee**
-
-Conference Chair(s)
-
--   Roger McDermett
--   Bruce Scharlau
-
-Program Chair(s)
-
--   Arnold Pears
--   Mihaela Sabin
