--- a/events/history_blog/2019.md
+++ b/events/history_blog/2019.md
@@ -19,8 +19,7 @@ The Outstanding Contribution to Computer Science Education Award was given to Ma
 The Lifetime Service to Computer Science Education was awarded to 
 Gloria Childress Townsend for seventeen years of dedicated service to ACM’s Council on Women in Computing, while transforming her vision for ACM Celebrations into a global project that supports thousands of women around the world.
 
-![SIGCSE-2019-DC-Photo](../../files/images/50yearsofSIGCSE/dcgroupphoto
-.jpg)
+![SIGCSE-2019-DC-Photo](../../files/images/50yearsofSIGCSE/dcgroupphoto.jpg)
 
 
 The 24th ITiCSE conference was held July 15-17, 2019 in Aberdeen, Scotland.  The Conference Chairs were Bruce Scharlau (University of Aberdeen) and Roger McDermott (Robert Gordon University, UK).  The Program Chairs were Arnold Pears (KTH Royal Institute of Technology, Sweden) and Mihaela Sabin (University of New Hampshire). There were a record 243 papers submitted with 66 accepted (27%). Just over half of the papers had an author from the United States or Canada, and 40% of the papers had a European author.  In addition to the papers, Posters, Panels, Tips, Techniques & Courseware, and ten Working Groups were part of the conference.  Additionally, a Doctoral Consortium was held the weekend before the conference that was sponsored by the Scottish Informatics & Computer Science Alliance (SICSA).
